tests/NormalTests/paczka1/fuzzy1/89958722.err
Error in line 9: NAO A350 94,5
Error in line 14: pUIolpLyoF A350 11,1
Error in line 19: nxDhNNO A350 18,6
Error in line 16: 3bvj S872 267,8
Error in line 24: 3bvj A37 63,8
Error in line 29: 3bvj S692 77,4
Error in line 35: pUIolpLyoF S692 5,6
